# sosp25-demeter

./: .gitignore  README.md  bin.mk  environment.mk  hypervisor.mk  kernel.mk  toolchain.mk  workload.mk
bench/: pyproject.toml  root.img
bench/bench/: __main__.py  bench.py  main.py  tasks.py  utils.py  vm.py  vm_api.py  workload.py
bench/tests/: evaluation.py
config/: demeter.config  demeterhost.config  memtis.config  nomad.config  tpp.config  tpphost.config
kernel/: .gitignore
patch/: demeter.patch  hypervisor.patch  sota.patch
script/: altair_theme.py  ansi2txt  bind-stdin.c  dram-pfn.py  id_ed25519  launcher.py  linux-5.15.162-tpphost.conf  linux-6.10.0-demeterhost.conf  network.bash  parse_log.py  plot.py  virbr921.xml
workload/btree/: .gitignore  Makefile  btree1.c  config.h
workload/bwaves/: bwaves_s  bwaves_s.in
workload/gapbs/: Makefile
workload/gapbs/benchmark/: bench.mk
workload/graph500/: .gitignore  Makefile  graph500.c  make-edgelist.c  make.inc  options.c
workload/gups/: .gitignore  Cargo.toml
workload/gups/src/: main.rs
workload/liblinear/: .gitignore  Makefile
workload/silo/: Makefile  util.h
workload/silo/benchmarks/: TDigest.h  bench.cc  bench.h  dbtest.cc
workload/silo/masstree/: config.h.in  configure
workload/xsbench/: GridInit.c  io.c
