[package]
name = "gups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
async-std = {version = "1", features = ["unstable"]}
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
mix-distribution = {git = "https://github.com/vtta/mix-distribution"}
zipf = "7.0"
pagemap = "0.1"
rand = "0.8"
rayon = "1.10"
num-traits = "0.2"
lazy_static = "1.5"
